# hufflepuff

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  ARCHIVE_FORMAT.md  CLI_USAGE.md  MATHEMATICAL_LOGIC.md
examples/: sample.txt
examples/sample_project/docs/: readme.md
examples/sample_project/src/: main.cpp
include/puff/archive/: archive_reader.hpp  archive_validator.hpp  archive_writer.hpp
include/puff/benchmark/: benchmark_engine.hpp
include/puff/cli/: command_parser.hpp  commands.hpp
include/puff/filesystem/: file_collector.hpp  path_utils.hpp
include/puff/huffman/: bit_reader.hpp  bit_writer.hpp  decoder.hpp  encoder.hpp  huffman_tree.hpp
include/puff/utils/: crc32.hpp  types.hpp
src/: CMakeLists.txt  main.cpp
src/archive/: archive_reader.cpp  archive_validator.cpp  archive_writer.cpp
src/benchmark/: benchmark_engine.cpp
src/cli/: command_parser.cpp  commands.cpp
src/filesystem/: file_collector.cpp  path_utils.cpp
src/huffman/: bit_reader.cpp  bit_writer.cpp  decoder.cpp  encoder.cpp  huffman_tree.cpp
src/utils/: crc32.cpp
tests/: CMakeLists.txt  test_archive.cpp  test_bit_io.cpp  test_encoder_decoder.cpp  test_filesystem.cpp  test_harness.hpp  test_huffman_tree.cpp  test_main.cpp  test_roundtrip.cpp
